Bugfix: Parse `poll-interval` in seconds Rename metric from `kafka_consumergroup_latest_offset` to `kafka_partition_latest_offset` Use JVM 8 experimental cgroup memory awareness flags when running exporter in container Use snakecase for metric label names